fix(page): make getAccountNumbers() fail fast if someone calls it on the wrong page